--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@toverux/ngx-sweetalert2": "^3.4.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
+    "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "json-server": "^0.12.1",
     "ng2-ion-range-slider": "^2.0.0",
