--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@angular/platform-browser": "^5.2.0",
     "@angular/platform-browser-dynamic": "^5.2.0",
     "@angular/router": "^5.2.0",
+    "@types/googlemaps": "^3.30.7",
     "@toverux/ngx-sweetalert2": "^3.4.0",
     "bootstrap": "^4.1.0",
     "core-js": "^2.4.1",
