--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "jquery": "^3.3.1",
     "json-server": "^0.12.1",
     "ng2-ion-range-slider": "^2.0.0",
+    "ng2-translate": "^5.0.0",
     "ngx-pagination": "^3.1.1",
     "ngx-permission": "^0.2.1",
     "ngx-permissions": "^5.0.0-rc.0",
