--- a/package.json
+++ b/package.json
@@ -34,7 +34,7 @@
     "ng2-translate": "^5.0.0",
     "ngx-pagination": "^3.1.1",
     "ngx-permission": "^0.2.1",
-    "ngx-permissions": "^5.0.0-rc.0",
+    "ngx-permissions": "^5.0.0",
     "popper.js": "^1.14.3",
     "rxjs": "^5.5.6",
     "sweetalert2": "^7.19.1",
